Fixes swagger definitions
